[package]
name = "wcpopup"
version = "0.2.3"
edition = "2021"
description = "Context menu for Windows"
documentation = "https://docs.rs/wcpopup/0.2.3/wcpopup/"
readme = "README.md"
categories = ["gui"]
license = "MIT"
repository = "https://github.com/mrdkprj/wcpopup"
exclude = [
    "/assets"
]

[features]
default = []
"accelerator" = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
  "x86_64-pc-windows-msvc"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19.0"
windows-version = "0.1.1"

[dependencies.windows]
version = "0.58"
features = [
  "Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Controls",
  "Win32_UI_Shell",
  "Win32_System",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Globalization",
  "Win32_System_Threading",
  "Win32_Graphics_Dwm",
  "UI_ViewManagement",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_System_Com",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_DirectWrite",
  "Foundation_Numerics",
]

[profile.release]
opt-level = "s"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
