[package]
name = "wcpopup"
version = "0.3.1"
edition = "2021"
description = "Context menu for Windows and Linux"
documentation = "https://docs.rs/wcpopup/0.3.1/wcpopup/"
readme = "README.md"
categories = ["gui"]
keywords = [
    "context",
    "menu",
]
license = "MIT"
repository = "https://github.com/mrdkprj/wcpopup"
exclude = [
    "/assets"
]

[features]
default = []
"accelerator" = []

[package.metadata.docs.rs]
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu"
]

[lib]
name = "wcpopup"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19.0"
async-std = "1.13.0"

[target.'cfg(target_os = "windows")'.dependencies.windows-version]
version = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
  "Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Controls",
  "Win32_UI_Shell",
  "Win32_System",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Globalization",
  "Win32_System_Threading",
  "Win32_Graphics_Dwm",
  "UI_ViewManagement",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_System_Com",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_DirectWrite",
  "Foundation_Numerics",
  "Win32_Graphics_Imaging",
]

[target.'cfg(target_os = "linux")'.dependencies.gtk]
version = "0.18.0"

[profile.release]
opt-level = "s"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
