[package]
name = "wcpopup"
version = "0.6.0"
edition = "2021"
description = "Context menu for Windows and Linux"
documentation = "https://docs.rs/wcpopup/"
readme = "README.md"
categories = ["gui"]
keywords = [
    "context",
    "menu",
]
license = "MIT"
repository = "https://github.com/mrdkprj/wcpopup"
exclude = [
    "/assets"
]

[features]
default = []
"accelerator" = []
"webview" = ["dep:wcpopup_win_hook"]

[package.metadata.docs.rs]
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu"
]

[lib]
name = "wcpopup"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19.0"
async-std = "1.13.0"

[target.'cfg(target_os = "windows")'.dependencies.windows-version]
version = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.60"
features = [
  "Win32_Graphics_Gdi",
  "Win32_UI_Controls",
  "Win32_UI_Shell",
  "Win32_System",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Globalization",
  "Win32_System_Threading",
  "Win32_Graphics_Dwm",
  "UI_ViewManagement",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_System_Com",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_DirectWrite",
  "Foundation_Numerics",
  "Win32_Graphics_Imaging",
]

[target.'cfg(target_os = "windows")'.dependencies.windows-numerics]
version = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies.wcpopup_win_hook]
git = "https://github.com/mrdkprj/wcpopup_win_hook.git"
rev = "fc4daa2fc5e53d3fb3324b0a14fefdf5dfad79e5"
optional = true

[target.'cfg(target_os = "linux")'.dependencies.gtk]
version = "0.18.0"

[dev-dependencies]
tao = "0.29.0"
wry = "0.44.1"

[profile.release]
opt-level = "s"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
